Add HashMap, create methods